smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/defaults/default-missing-structure-close.smithy
// Parse error at line 8, column 1 near ``: Expected: '}'
$version: "2.0"

namespace com.foo

structure Foo {
    bar: String = ""
